hide overflowing data. fixes #3

--- a/assets/stylesheets/categories.scss
+++ b/assets/stylesheets/categories.scss
@@ -1,4 +1,6 @@
 .categories-widget {
+  overflow: hidden;
+  
   ul {
     list-style: none;
     padding-left: 0;
